--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
   <title>Flutuar</title>
 </head>
 <body>
-  <main>
+  <header>
     <div class="container">
       <img class="container__img" src="images/img1.png" alt="Pessoa segurando o globo com locais de viagem">
 
       <h1 class="titulo__principal">O seu próximo <span>destino</span> pode estar aqui...</h1>
-
+    </div>
+  </header>
+  <main>
+    <div class="container__main">
       <p class="texto__principal">Aqui você encontra uma seleção de <strong>pacotes completos</strong> para as suas férias!
       <br/>
       <br/>
